--- a/app/src/main/res/layout/listview_item.xml
+++ b/app/src/main/res/layout/listview_item.xml
@@ -8,7 +8,9 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Contact Name"
-        android:id="@+id/contactName" />
+        android:id="@+id/contactName"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -16,19 +18,25 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Phone"
         android:id="@+id/phoneNumber"
-        android:layout_marginTop="5dp" />
+        android:layout_marginTop="5dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Email"
-        android:id="@+id/emailAddress" />
+        android:id="@+id/emailAddress"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Address"
-        android:id="@+id/cAddress" />
+        android:id="@+id/cAddress"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp" />
 </LinearLayout>
